fix broken css for font awesome

--- a/src/vr/static/css/fontawesome/css/all.css
+++ b/src/vr/static/css/fontawesome/css/all.css
@@ -29,11 +29,11 @@
 .fa-solid,
 .far,
 .fa-regular {
-  font-family: 'Font Awesome 6 Free', sans-serif; }
+  font-family: 'Font Awesome 6 Free'; }
 
 .fab,
 .fa-brands {
-  font-family: 'Font Awesome 6 Brands', sans-serif; }
+  font-family: 'Font Awesome 6 Brands'; }
 
 .fa-1x {
   font-size: 1em; }
@@ -6375,7 +6375,7 @@ readers do not read off random characters that represent icons */
   --fa-font-brands: normal 400 1em/1 'Font Awesome 6 Brands'; }
 
 @font-face {
-  font-family: 'Font Awesome 6 Brands', sans-serif;
+  font-family: 'Font Awesome 6 Brands';
   font-style: normal;
   font-weight: 400;
   font-display: block;
@@ -7892,7 +7892,7 @@ readers do not read off random characters that represent icons */
   --fa-font-regular: normal 400 1em/1 'Font Awesome 6 Free'; }
 
 @font-face {
-  font-family: 'Font Awesome 6 Free', sans-serif;
+  font-family: 'Font Awesome 6 Free';
   font-style: normal;
   font-weight: 400;
   font-display: block;
@@ -7906,7 +7906,7 @@ readers do not read off random characters that represent icons */
   --fa-font-solid: normal 900 1em/1 'Font Awesome 6 Free'; }
 
 @font-face {
-  font-family: 'Font Awesome 6 Free', sans-serif;
+  font-family: 'Font Awesome 6 Free';
   font-style: normal;
   font-weight: 900;
   font-display: block;
