--- a/src/vr/static/css/fontawesome/css/fontawesome.css
+++ b/src/vr/static/css/fontawesome/css/fontawesome.css
@@ -29,11 +29,11 @@
 .fa-solid,
 .far,
 .fa-regular {
-  font-family: 'Font Awesome 6 Free', sans-serif; }
+  font-family: 'Font Awesome 6 Free'; }
 
 .fab,
 .fa-brands {
-  font-family: 'Font Awesome 6 Brands', sans-serif; }
+  font-family: 'Font Awesome 6 Brands'; }
 
 .fa-1x {
   font-size: 1em; }
